--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.45.4",
-    "date-fns": "^4.1.0",
+    "@types/react-datepicker": "^6.2.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18"
   },
   "devDependencies": {
