--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-datepicker": "^6.2.0",
     "date-fns": "^3.6.0",
     "next": "14.2.13",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18"
